--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio | Front</title>
+    <title>Little Way | Flower Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -120,7 +120,7 @@
         </div>
     </section>
     <footer>
-        <span>Copyright 2023 <a href="">LITTLE WAY</a> All Rights Reserved</span>
+        <span>Copyright 2023 <a href="">Deise Alves</a> All Rights Reserved</span>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
